Other half of checkbox fix, download button visibility improvement, layout and style enhancement for query results

--- a/query_prototype/static/css/query_prototype.css
+++ b/query_prototype/static/css/query_prototype.css
@@ -60,9 +60,11 @@ Purpose: Stylesheet for query prototype
 /* Card list */
 #card-listbox {
 
-    border: 2px;
+    border: 1em;
     border-color: gray;
-    height: 75vh;
+    border-bottom-left-radius:  10px;
+    border-bottom-right-radius: 10px;    
+    height: 65vh;
     overflow-y: auto;
 }
 
@@ -70,7 +72,7 @@ Purpose: Stylesheet for query prototype
 
     background-color: dodgerblue;
     color: white;
-    visibility: hidden;
+    /* visibility: hidden; */
 }
 
 #download-results-link {
@@ -81,11 +83,31 @@ Purpose: Stylesheet for query prototype
 
 #query-controls {
 
+    padding-top: 1em;
     padding-bottom: 1em;
 }
+
+/* #query-fields-column {
+
+    margin-right: 1em;
+}
+
+#query-results-column {
+
+    margin-left: 1em;
+} */
 
 #repo-row {
  
     padding-bottom: 1em;
 }
 
+#results-list-group {
+
+    padding-right: 0;
+}
+
+#summary-stats {
+
+    float: right;
+}
